feat: Enhance login and signup UI/UX

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta name="description" content="REMS is a comprehensive online property management software for real estate agents and landlords in Kenya.">
     <meta name="keywords" content="property management, real estate, software, Kenya">
     <title>REMS - Property Management Software</title>
+    <link rel="stylesheet" href="navbar.css">
+    <script src="navbar.js" defer></script>
     <style>
         /* Global styles */
         html, body {
@@ -121,8 +123,10 @@
 </head>
 <body>
     <header>
-        <div class="navbar">
-            <div class="logo">Mylogo</div>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="index.html">REMS</a>
+            </div>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -134,13 +138,11 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <div class="nav-list">
-                <ul>
-                    <li><a href="sign-up.html">Sign Up</a></li>
-                    <li><a href="login.html">Login</a></li>
-                </ul>
+            <div class="auth-links">
+                <a href="sign-up.html" class="signup-btn">Sign Up</a>
+                <a href="login.html" class="login-btn">Login</a>
             </div>
-        </div>
+        </nav> 
     </header>
 
     <main>
