--- a/contact.html
+++ b/contact.html
@@ -150,21 +150,26 @@
 </head>
 <body>
     <header>Contact Us</header>
-    <div class="navbar">
-        <div class="logo">Mylogo</div>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">REMS</a>
+        </div>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="pic.html">Properties</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="nav-list">
-            <ul>
-                <li><a href="sign-up.html">Sign Up</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
+        <div class="auth-links">
+            <a href="sign-up.html" class="signup-btn">Sign Up</a>
+            <a href="login.html" class="login-btn">Login</a>
         </div>
-    </div>
+    </nav> 
     <main class="flex-container">
         <div class="contact-details">
             <p>GET IN TOUCH</p>
