--- a/index.html
+++ b/index.html
@@ -6,97 +6,19 @@
     <title>Real Estate Management System</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: rgb(54, 54, 100);
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-        .navbar {
-            display: flex;  
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 20px;
-        }
-        .nav-links {
-            list-style-type: none;
-        }
-        .nav-links li {
-            display: inline;
-            margin: 0 15px;
-        }
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-        }
-        .header-content {
-            margin-top: 20px;
-        }
-        .carousel {
-            position: relative;
-            width: 100%;
-            height: 650px; 
-            overflow: hidden;
-        }
-        .carousel-inner {
-            height: 100%; 
-            transition: transform 0.5s ease-in-out; 
-        }
-        .carousel-item {
-            height: 100%; 
-            opacity: 0; 
-            transition: opacity 0.5s ease-in-out; 
-        }
-        .carousel-item.active {
-            opacity: 1; 
-        }
-        .carousel img {
-            width: 100%;
-            height: 100%; 
-            object-fit: cover; 
-        }
-        .prev, .next {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: rgba(255, 255, 255, 0.5);
-            border: none;
-            font-size: 24px;
-            cursor: pointer;
-            z-index: 1; 
-        }
-        .prev {
-            left: 10px;
-        }
-        .next {
-            right: 10px;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="navbar.css">
+ 
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">Mylogo</div>
-                <div class="menu-toggle" id="mobile-menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
+            <div class="logo">
+                <a href="index.html">REMS</a>
+            </div>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -104,13 +26,11 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <div class="nav-list">
-                <ul >
-                    <li><a href="sign-up.html">Sign Up</a></li>
-                    <li><a href="login.html">Login</a></li>
+            <div class="auth-links">
+                <a href="sign-up.html" class="signup-btn">Sign Up</a>
+                <a href="login.html" class="login-btn">Login</a>
             </div>
-    
-        </nav>
+        </nav> 
         <div class="header-content">
             <h1>Welcome to Real Estate Management</h1>
             <p>Your dream property is just one click away!</p>
@@ -165,6 +85,8 @@
             moveSlide(1);
         }, 3000);
     </script>
+
+    <script src="navbar.js" defer></script>
 
 </body>
 </html>
