--- a/index.html
+++ b/index.html
@@ -41,17 +41,30 @@
         <div id="carousel" class="carousel" aria-live="polite">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="wix-transformed.jpeg" alt="Spacious 3-bedroom home in the suburbs">
+                    <img src="wix-transformed.jpeg" alt="Spacious 3-bedroom home">
+                    <div class="carousel-caption">
+                        <h2>Luxury Living</h2>
+                        <p>Discover our premium collection of homes</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://th.bing.com/th/id/R.853d8041205c99b93df1cc8d03268458?rik=QyDnDPZ02Y18IA&pid=ImgRaw&r=0" alt="Modern apartment in the city center">
+                    <img src="https://th.bing.com/th/id/R.853d8041205c99b93df1cc8d03268458?rik=QyDnDPZ02Y18IA&pid=ImgRaw&r=0" alt="Modern apartment">
+                    <div class="carousel-caption">
+                        <h2>Modern Design</h2>
+                        <p>Contemporary living spaces for modern lifestyle</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?cs=srgb&dl=interior-design-of-a-house-1571460.jpg&fm=jpg" alt="Luxurious villa with ocean view">
+                    <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Luxurious villa">
+                    <div class="carousel-caption">
+                        <h2>Premium Properties</h2>
+                        <p>Exclusive properties in prime locations</p>
+                    </div>
                 </div>
             </div>
-            <button class="prev" onclick="moveSlide(-1)" aria-label="Previous slide">&#10094;</button>
-            <button class="next" onclick="moveSlide(1)" aria-label="Next slide">&#10095;</button>
+            <button class="prev" onclick="moveSlide(-1)" aria-label="Previous slide">❮</button>
+            <button class="next" onclick="moveSlide(1)" aria-label="Next slide">❯</button>
+            <div class="carousel-indicators"></div>
         </div>  
     </main>
 
@@ -60,30 +73,64 @@
     </footer>
 
     <script>
-        let currentSlide = 0;
-
-        function showSlide(index) {
+        document.addEventListener('DOMContentLoaded', function() {
+            let currentSlide = 0;
             const slides = document.querySelectorAll('.carousel-item');
-            const totalSlides = slides.length;
+            const indicators = document.querySelector('.carousel-indicators');
 
-            currentSlide = (index + totalSlides) % totalSlides;
-
-            slides.forEach(slide => {
-                slide.classList.remove('active');
-                slide.style.opacity = '0';
+            // Create indicators
+            slides.forEach((_, index) => {
+                const dot = document.createElement('div');
+                dot.classList.add('indicator');
+                if (index === 0) dot.classList.add('active');
+                dot.addEventListener('click', () => showSlide(index));
+                indicators.appendChild(dot);
             });
 
-            slides[currentSlide].classList.add('active');
-            slides[currentSlide].style.opacity = '1';
-        }
+            function updateIndicators() {
+                document.querySelectorAll('.indicator').forEach((indicator, index) => {
+                    indicator.classList.toggle('active', index === currentSlide);
+                });
+            }
 
-        function moveSlide(direction) {
-            showSlide(currentSlide + direction);
-        }
+            function showSlide(index) {
+                const totalSlides = slides.length;
+                currentSlide = (index + totalSlides) % totalSlides;
 
-        setInterval(() => {
-            moveSlide(1);
-        }, 3000);
+                slides.forEach(slide => {
+                    slide.classList.remove('active');
+                    slide.style.opacity = '0';
+                });
+
+                slides[currentSlide].classList.add('active');
+                slides[currentSlide].style.opacity = '1';
+                updateIndicators();
+            }
+
+            function moveSlide(direction) {
+                showSlide(currentSlide + direction);
+            }
+
+            // Auto-advance slides
+            setInterval(() => moveSlide(1), 5000);
+
+            // Add touch support
+            let touchStartX = 0;
+            const carousel = document.querySelector('.carousel');
+
+            carousel.addEventListener('touchstart', e => {
+                touchStartX = e.touches[0].clientX;
+            });
+
+            carousel.addEventListener('touchend', e => {
+                const touchEndX = e.changedTouches[0].clientX;
+                const diff = touchStartX - touchEndX;
+
+                if (Math.abs(diff) > 50) {
+                    moveSlide(diff > 0 ? 1 : -1);
+                }
+            });
+        });
     </script>
 
     <script src="navbar.js" defer></script>
