--- a/pic.html
+++ b/pic.html
@@ -3,101 +3,156 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Property Listings</title> 
-<link rel="stylesheet" href="style.css">
+    <title>Property Listings - REMS</title> 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 </head>
 <body>
+    <!-- Include the standardized navbar -->
     <nav class="navbar">
-        <div class="logo">MyLogo</div>
+        <div class="logo">
+            <a href="index.html">REMS</a>
+        </div>
         <div class="menu-toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </div>
-        <ul class="nav-list">
+        <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
             <li><a href="pic.html">Properties</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <ul class="nav-list auth-links">
-            <li><a href="sign-up.html">Sign Up</a></li>
-            <li><a href="login.html">Login</a></li>
-        </ul>
+        <div class="auth-links">
+            <a href="sign-up.html" class="signup-btn">Sign Up</a>
+            <a href="login.html" class="login-btn">Login</a>
+        </div>
     </nav>
+
     <div class="intro-text">
-        <p>REMS is a comprehensive online property management software that enables real estate agents and landlords to effectively manage their properties, including property information, maintenance requests, and invoicing. It has quickly become the go-to software for all agents and property owners in Kenya for all their property management needs.</p>
+        <h1>Available Properties</h1>
+        <p>Discover your perfect property from our carefully curated collection of premium real estate listings.</p>
     </div>
+
     <section class="property-listings">
         <div class="container">
+            <!-- Filter Section -->
+
+
             <div class="property-grid">
+                <!-- Property 1 -->
                 <div class="property-card">
-                    <h2>High Peak Home</h2>
-                    <img src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg" alt="High Peak Home">
-                    <div class="property-details">
-                        <p class="price">Price: KSH 100,000</p>
-                        <p class="location">Location: Lanet Nakuru</p>
+                    <div class="property-image">
+                        <img src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg" alt="High Peak Home">
+                        <div class="property-tag">Featured</div>
+                    </div>
+                    <div class="property-content">
+                        <h2>High Peak Home</h2>
+                        <div class="property-details">
+                            <div class="property-info">
+                                <i class="fas fa-money-bill"></i>
+                                <p class="price">KSH 100,000</p>
+                            </div>
+                            <div class="property-info">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <p class="location">Lanet, Nakuru</p>
+                            </div>
+                            <div class="property-features">
+                                <span><i class="fas fa-bed"></i> 3 Beds</span>
+                                <span><i class="fas fa-bath"></i> 2 Baths</span>
+                                <span><i class="fas fa-ruler-combined"></i> 1500 sq ft</span>
+                            </div>
+                        </div>
                         <a href="/property/1" class="view-details-btn">View Details</a>
                     </div>
                 </div>
+
+                <!-- Property 2 -->
                 <div class="property-card">
-                    <h2>Sunset Ridge</h2>
-                    <img src="https://th.bing.com/th/id/OIP.RM4nwfyV5n5N_ylO6sPIRAHaFj?rs=1&pid=ImgDetMain" alt="Sunset Ridge">
-                    <div class="property-details">
-                        <p class="price">Price: KSH 1,500,000</p>
-                        <p class="location">Location: Naivasha Nakuru</p>
+                    <div class="property-image">
+                        <img src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg" alt="Modern Villa">
+                        <div class="property-tag">New</div>
+                    </div>
+                    <div class="property-content">
+                        <h2>Modern Villa</h2>
+                        <div class="property-details">
+                            <div class="property-info">
+                                <i class="fas fa-money-bill"></i>
+                                <p class="price">KSH 150,000</p>
+                            </div>
+                            <div class="property-info">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <p class="location">Naivasha</p>
+                            </div>
+                            <div class="property-features">
+                                <span><i class="fas fa-bed"></i> 4 Beds</span>
+                                <span><i class="fas fa-bath"></i> 3 Baths</span>
+                                <span><i class="fas fa-ruler-combined"></i> 2000 sq ft</span>
+                            </div>
+                        </div>
                         <a href="/property/2" class="view-details-btn">View Details</a>
                     </div>
                 </div>
+
+                <!-- Property 3 -->
                 <div class="property-card">
-                    <h2>Simple Modern House</h2>
-                    <img src="https://th.bing.com/th/id/OIP.i2YTH6Bc2q8ZeRQFsVIshQHaE8?rs=1&pid=ImgDetMain" alt="Simple Modern House">
-                    <div class="property-details">
-                        <p class="price">Price: KSH 5,000,000</p>
-                        <p class="location">Location: Lanet Nakuru</p>
+                    <div class="property-image">
+                        <img src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg" alt="Lakeside Apartment">
+                    </div>
+                    <div class="property-content">
+                        <h2>Lakeside Apartment</h2>
+                        <div class="property-details">
+                            <div class="property-info">
+                                <i class="fas fa-money-bill"></i>
+                                <p class="price">KSH 80,000</p>
+                            </div>
+                            <div class="property-info">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <p class="location">Gilgil</p>
+                            </div>
+                            <div class="property-features">
+                                <span><i class="fas fa-bed"></i> 2 Beds</span>
+                                <span><i class="fas fa-bath"></i> 1 Bath</span>
+                                <span><i class="fas fa-ruler-combined"></i> 1000 sq ft</span>
+                            </div>
+                        </div>
                         <a href="/property/3" class="view-details-btn">View Details</a>
                     </div>
                 </div>
+
+                <!-- Property 4 -->
                 <div class="property-card">
-                    <h2>Modern House</h2>
-                    <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max" alt="Modern House">
-                    <div class="property-details">
-                        <p class="price">Price: KSH 1,200,000</p>
-                        <p class="location">Location: Naivasha Nakuru</p>
+                    <div class="property-image">
+                        <img src="https://images.pexels.com/photos/1029599/pexels-photo-1029599.jpeg" alt="Garden Estate">
+                        <div class="property-tag">Premium</div>
+                    </div>
+                    <div class="property-content">
+                        <h2>Garden Estate</h2>
+                        <div class="property-details">
+                            <div class="property-info">
+                                <i class="fas fa-money-bill"></i>
+                                <p class="price">KSH 200,000</p>
+                            </div>
+                            <div class="property-info">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <p class="location">Lanet, Nakuru</p>
+                            </div>
+                            <div class="property-features">
+                                <span><i class="fas fa-bed"></i> 5 Beds</span>
+                                <span><i class="fas fa-bath"></i> 4 Baths</span>
+                                <span><i class="fas fa-ruler-combined"></i> 3000 sq ft</span>
+                            </div>
+                        </div>
                         <a href="/property/4" class="view-details-btn">View Details</a>
-                    </div>
-                </div>
-                <div class="property-card">
-                    <h2>Cozy House</h2>
-                    <img src="https://th.bing.com/th/id/OIP.wM0uHu-4gHHhL5jdq4oh0gHaJ9?&rs=1&pid=ImgDetMain" alt="Cozy House">
-                    <div class="property-details">
-                        <p class="price">Price: KSH 1,600,000</p>
-                        <p class="location">Location: Gilgil Nakuru</p>
-                        <a href="/property/5" class="view-details-btn">View Details</a>
-                    </div>
-                </div>
-                <div class="property-card">
-                    <h2>Ultra Modern House</h2>
-                    <img src="https://th.bing.com/th/id/OIP.-w7in20rnkKLD03yfRaEzwHaHa?rs=1&pid=ImgDetMain" alt="Ultra Modern House">
-                    <div class="property-details">
-                        <p class="price">Price: KSH 1,700,000</p>
-                        <p class="location">Location: Gilgil Nakuru</p>
-                        <a href="/property/6" class="view-details-btn">View Details</a>
-                    </div>
-                </div>
-                <div class="property-card">
-                    <h2>Stunning Man-Made House</h2>
-                    <img src="https://images7.alphacoders.com/341/341714.jpg" alt="Stunning Man-Made House">
-                    <div class="property-details">
-                        <p class="price">Price: KSH 1,500,000</p>
-                        <p class="location">Location: Naivasha Nakuru</p>
-                        <a href="/property/7" class="view-details-btn">View Details</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-</body>
 
+    <script src="navbar.js"></script>
+</body>
 </html>
