--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="REMS is a comprehensive online property management software for real estate agents and landlords in Kenya.">
     <meta name="keywords" content="property management, real estate, software, Kenya">
-    <title>About Us - REMS</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
