--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
             display: inline-block;
             padding: 1rem 2rem;
             background: #4CAF50;
-            color: white;
+            color: snow;
             text-decoration: none;
             border-radius: 6px;
             transition: background 0.3s ease;
